# disc_limo

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
src/disc_limo/: __init__.py  convolution_matrix.py  cube_from_weights.py  cube_io.py  design_matrices.py  fit_channels.py  fit_lines.py  sample_posterior.py  training.py
